--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
 </head>
 
 <body>
+
     <!-- BOTÃO PARA VOLTAR AO TOPO DA TELA -->
     <div id="top">
-        <a href="#"><img width="50" height="50" src="https://img.icons8.com/ios/50/000000/send-letter--v1.png" alt="send-letter--v1" ></a>
+        <a href="#"><img width="50" height="50" src="/assests/seta.png" alt="send-letter--v1"
+                title="Voltar ao topo"></a>
     </div>
 
     <!-- NAVBAR -->
@@ -321,14 +323,14 @@
 
 
     <!-- FOOTER -->
-    <footer> 
+    <footer>
         <div class="container">
             <div class="row">
                 <div class="col-lg-3 col-sm-6">
                     <div class="single-box">
-                        <img src="img/logo.png" alt="">
                         <h2>Bora Catar</h2>
-                        <p>"Preservar o meio ambiente é a nossa missão na Bora Catar, pois a sustentabilidade é o caminho para um futuro melhor."</p>
+                        <p>"Preservar o meio ambiente é a nossa missão na Bora Catar, pois a sustentabilidade é o
+                            caminho para um futuro melhor."</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-sm-6">
@@ -363,7 +365,7 @@
                                     class="fa fa-long-arrow-right"></i></span>
                         </div>
                         <h2>Siga-nos</h2>
-                        <pclass="socials">
+                        <p class="socials">
                             <i class="fa fa-facebook"></i>
                             <i class="fa fa-instagram"></i>
                             <i class="fa fa-twitter"></i>
