--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <!-- BOTÃO PARA VOLTAR AO TOPO DA TELA -->
     <div id="top">
-        <a href="#"><img width="50" height="50" src="/assests/seta.png" alt="send-letter--v1"
+        <a href="#"><img width="50" height="50" src="../assests/seta.png" alt="send-letter--v1"
                 title="Voltar ao topo"></a>
     </div>
 
@@ -25,7 +25,7 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="/assests/LogoBoraCatá.png" alt="Logo" width="150" height="50"
+                <img src="../prova/assests/LogoBoraCatá.png" alt="Logo" width="150" height="50" 
                     class="d-inline-block align-text-top">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
