--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <!-- BOTÃO PARA VOLTAR AO TOPO DA TELA -->
     <div id="top">
-        <a href="#"><img width="50" height="50" src="../assests/seta.png" alt="send-letter--v1"
+        <a href="#"></img width="50" height="50" src="/assests/seta.png" alt="send-letter--v1"
                 title="Voltar ao topo"></a>
     </div>
 
