--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
     <!-- TELA PARA QUANDO FOR DE UM DISPOSITIVO MOBILE -->
     <div style="position: relative;" class="d-block d-lg-none">
-        <img width="100%" src="/assests/tela2Carrosel.png" alt="">
+        <img width="100%" src="assests/tela2Carrosel.png" alt="">
     </div>
 
     <!-- IMAGEM PASSANDO NO FORMATO CAROUSEL -->
@@ -85,13 +85,13 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active" style="height: 100%;">
-                <img class="d-block w-100 custom-height" src="/assests/tela1Carrosel.png" class="d-block w-100">
+                <img class="d-block w-100 custom-height" src="assests/tela1Carrosel.png" class="d-block w-100">
             </div>
             <div class="carousel-item" style="height: 100%;">
-                <img class="d-block w-100 custom-height" src="/assests/tela2Carrosel.png" class="d-block w-100" alt="">
+                <img class="d-block w-100 custom-height" src="assests/tela2Carrosel.png" class="d-block w-100" alt="">
             </div>
             <div class="carousel-item" style="height: 100%;">
-                <img class="d-block w-100 custom-height" src="/assests/tela3Carrosel.png" class="d-block w-100" alt="">
+                <img class="d-block w-100 custom-height" src="assests/tela3Carrosel.png" class="d-block w-100" alt="">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
@@ -134,13 +134,13 @@
                         </div>
                         <div class="carousel-inner">
                             <div class="carousel-item active" data-bs-interval="10000">
-                                <img width="560" height="315" src="/assests/fase1.png" alt="">
+                                <img width="560" height="315" src="assests/fase1.png" alt="">
                             </div>
                             <div class="carousel-item">
-                                <img width="560" height="315" src="/assests/fase2.png" alt="">
+                                <img width="560" height="315" src="assests/fase2.png" alt="">
                             </div>
                             <div class="carousel-item">
-                                <img width="560" height="315" src="/assests/fase3.png" alt="">
+                                <img width="560" height="315" src="assests/fase3.png" alt="">
                             </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark"
@@ -164,7 +164,7 @@
         <div class="container-fluid" style="background-color: #FFA500; padding: 50px 0;" id="lixoQuimico">
             <div class="row p-3 p-md-5">
                 <div class="col-md-6 mt-4" data-aos="flip-right">
-                    <img width="460" src="/assests/tela de pausa baterias.png" alt="">
+                    <img width="460" src="assests/tela de pausa baterias.png" alt="">
                 </div>
                 <div class="col-md-6" data-aos="fade-left">
                     <h3 class="titulo">Lixo Químico</h3>
@@ -196,7 +196,7 @@
                     </div>
                 </div>
                 <div class="col-md-6 mt-5" data-aos="flip-left">
-                    <img width="460" src="/assests/tela de pausa papel.png" alt="">
+                    <img width="460" src="assests/tela de pausa papel.png" alt="">
                 </div>
             </div>
         </div>
@@ -207,7 +207,7 @@
         <div class="container-fluid" style="background-color: #f1c40f ; padding: 50px 0;" id="metal">
             <div class="row p-3 p-md-5">
                 <div class="col-md-6 mt-3" data-aos="flip-left">
-                    <img width="460" src="/assests/tela de pausa metal.png" alt="">
+                    <img width="460" src="assests/tela de pausa metal.png" alt="">
                 </div>
                 <div class="col-md-6" data-aos="fade-right">
                     <h3 class="titulo">Metal</h3>
@@ -239,7 +239,7 @@
                     </div>
                 </div>
                 <div class="col-md-6 mt-4" data-aos="flip-right">
-                    <img width="460" src="/assests/tela de pausa plastico.png" alt="">
+                    <img width="460" src="assests/tela de pausa plastico.png" alt="">
                 </div>
             </div>
         </div>
@@ -250,7 +250,7 @@
         <div class="container-fluid" style="background-color: #2ecc71; padding: 50px 0;" id="vidro">
             <div class="row p-3 p-md-5">
                 <div class="col-md-6 mt-5" data-aos="flip-left">
-                    <img width="460" src="/assests/tela de pausa vidro.png" alt="">
+                    <img width="460" src="assests/tela de pausa vidro.png" alt="">
                 </div>
                 <div class="col-md-6" data-aos="fade-right">
                     <h3 class="titulo">Vidro</h3>
@@ -282,7 +282,7 @@
                     </div>
                 </div>
                 <div class="col-md-6 mt-4" data-aos="flip-left">
-                    <img width="460" src="/assests/tela de pausa comum.png" alt="">
+                    <img width="460" src="assests/tela de pausa comum.png" alt="">
                 </div>
             </div>
         </div>
@@ -295,27 +295,27 @@
             <div class="row" data-aos="fade-up">
                 <div class="col-md-2 col-6 image-container">
                     <h3 class="text-center">Química</h3>
-                    <img src="/assests/quimico.png" width="100%" alt="">
+                    <img src="assests/quimico.png" width="100%" alt="">
                 </div>
                 <div class="col-md-2 col-6">
                     <h3 class="text-center">Papel</h3>
-                    <img src="/assests/papel.png" width="100%" alt="">
+                    <img src="assests/papel.png" width="100%" alt="">
                 </div>
                 <div class="col-md-2 col-6">
                     <h3 class="text-center">Metal</h3>
-                    <img src="/assests/metal.png" width="100%" alt="">
+                    <img src="assests/metal.png" width="100%" alt="">
                 </div>
                 <div class="col-md-2 col-6">
                     <h3 class="text-center">Plástico</h3>
-                    <img src="/assests/plastico.png" width="100%" alt="">
+                    <img src="assests/plastico.png" width="100%" alt="">
                 </div>
                 <div class="col-md-2 col-6">
                     <h3 class="text-center">Vidro</h3>
-                    <img src="/assests/vidro.png" width="100%" alt="">
+                    <img src="assests/vidro.png" width="100%" alt="">
                 </div>
                 <div class="col-md-2 col-6">
                     <h3 class="text-center">Comum</h3>
-                    <img src="/assests/comum.png" width="100%" alt="">
+                    <img src="assests/comum.png" width="100%" alt="">
                 </div>
             </div>
         </div>
