--- a/index.html
+++ b/index.html
@@ -17,15 +17,14 @@
 
     <!-- BOTÃO PARA VOLTAR AO TOPO DA TELA -->
     <div id="top">
-        <a href="#"><img width="50" height="50" src="assests/seta.png" alt="send-letter--v1"
-                title="Voltar ao topo"></a>
+        <a href="#"><img width="50" height="50" src="assests/seta.png" alt="send-letter--v1" title="Voltar ao topo"></a>
     </div>
 
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="prova/assests/LogoBoraCatá.png" alt="Logo" width="150" height="50" 
+                <img src="assests/LogoBoraCatá.png" alt="Logo" width="100" height="50"
                     class="d-inline-block align-text-top">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -85,13 +84,13 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active" style="height: 100%;">
-                <img class="d-block w-100 custom-height" src="assests/tela1Carrosel.png" class="d-block w-100">
+                <img class="d-block w-100 custom-height" src="assests/tela1Carrosel.png">
             </div>
             <div class="carousel-item" style="height: 100%;">
-                <img class="d-block w-100 custom-height" src="assests/tela2Carrosel.png" class="d-block w-100" alt="">
+                <img class="d-block w-100 custom-height" src="assests/tela2Carrosel.png">
             </div>
             <div class="carousel-item" style="height: 100%;">
-                <img class="d-block w-100 custom-height" src="assests/tela3Carrosel.png" class="d-block w-100" alt="">
+                <img class="d-block w-100 custom-height" src="assests/Tela3Carrosel.png">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
@@ -107,19 +106,21 @@
     </div>
 
     <section>
-        <!-- MENU COMO JOGAR -->
-        <div class="container-fluid" style="background-color: #69f0ae; padding: 50px 0;" id="menuJogar">
-            <div class="row p-3 p-md-5">
+           <!-- MENU COMO JOGAR -->
+        <div class="container-fluid" style="background-color: #69f0ae;" id="menuJogar">
+            <div class="row p-3 p-md-5 align-items-center">
                 <div class="col-md-6 mt-3" data-aos="fade-left">
-                    <h3 class="titulo">Bora Catar</h3>
                     <div class="texto">
-                        Bora Catar é um jogo divertido e educativo onde você ganha pontos ao longo do jogo enquanto
-                        aprende sobre a reciclagem e é incentivado a reciclar. O objetivo do jogo é percorrer diversos
-                        cenários, coletando e separando lixo reciclável do chão. Cada vez que você acerta um item, você
-                        ganha pontos que ajudam a aumentar sua pontuação geral. Além disso, conforme você recicla mais
-                        lixo, você desbloqueia novos cenários, tornando a experiência ainda mais empolgante. Bora Catar
-                        é uma ótima maneira de se divertir enquanto aprende como é importante reciclar e cuidar do meio
-                        ambiente. Vamos jogar e fazer a diferença!
+                        <h3 class="titulo">Bora Catá</h3>
+                        <p>
+                            Bora Catá é um jogo divertido e educativo onde você ganha pontos ao longo do jogo enquanto
+                            aprende sobre a reciclagem e é incentivado a reciclar. O objetivo do jogo é percorrer diversos
+                            cenários, coletando e separando lixo reciclável do chão. Cada vez que você acerta um item, você
+                            ganha pontos que ajudam a aumentar sua pontuação geral. Além disso, conforme você recicla mais
+                            lixo, você desbloqueia novos cenários, tornando a experiência ainda mais empolgante. Bora Catá
+                            é uma ótima maneira de se divertir enquanto aprende como é importante reciclar e cuidar do meio
+                            ambiente. Vamos jogar e fazer a diferença!
+                        </p>
                     </div>
                 </div>
                 <div class="col-md-6" data-aos="flip-right">
@@ -161,19 +162,21 @@
 
     <section>
         <!-- MENU LIXO QUIMICO -->
-        <div class="container-fluid" style="background-color: #FFA500; padding: 50px 0;" id="lixoQuimico">
-            <div class="row p-3 p-md-5">
+        <div class="container-fluid" style="background-color: #FFA500;" id="lixoQuimico">
+            <div class="row p-3 p-md-5 align-items-center">
                 <div class="col-md-6 mt-4" data-aos="flip-right">
-                    <img width="460" src="assests/tela de pausa baterias.png" alt="">
+                    <img width="100%" src="assests/tela de pausa baterias.png" alt="">
                 </div>
                 <div class="col-md-6" data-aos="fade-left">
-                    <h3 class="titulo">Lixo Químico</h3>
                     <div class="texto">
-                        O lixo químico, composto por substâncias tóxicas, requer tratamento especializado, identificação
-                        correta e armazenamento adequado. Empresas especializadas realizam neutralização, recuperação e
-                        incineração controlada, seguindo normas ambientais para o descarte final seguro. O monitoramento
-                        contínuo garante eficácia no tratamento e preserva o meio ambiente e a saúde humana. Tratar o
-                        lixo químico corretamente é crucial para reduzir impactos negativos.
+                        <h3 class="titulo">Lixo Químico</h3>
+                        <p>
+                            O lixo químico, composto por substâncias tóxicas, requer tratamento especializado, identificação
+                            correta e armazenamento adequado. Empresas especializadas realizam neutralização, recuperação e
+                            incineração controlada, seguindo normas ambientais para o descarte final seguro. O monitoramento
+                            contínuo garante eficácia no tratamento e preserva o meio ambiente e a saúde humana. Tratar o
+                            lixo químico corretamente é crucial para reduzir impactos negativos.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -182,21 +185,23 @@
 
     <section>
         <!-- MENU LIXO PAPEL -->
-        <div class="container-fluid" style="background-color: #3498db; padding: 50px 0;" id="papel">
-            <div class="row p-3 p-md-5">
+        <div class="container-fluid" style="background-color: #3498db;" id="papel">
+            <div class="row p-3 p-md-5 align-items-center">
                 <div class="col-md-6" data-aos="fade-right">
-                    <h3 class="titulo">Papel</h3>
                     <div class="texto">
-                        O lixo de papel consiste em resíduos feitos de fibra de celulose, como folhas de papel, jornais,
-                        revistas e caixas de papelão. É importante fazer a separação correta desse lixo para reciclagem,
-                        evitando a degradação do meio ambiente. O papel é coletado e passa por um processo de reciclagem
-                        que inclui a separação das fibras, a limpeza e o tratamento para a fabricação de novos produtos
-                        de papel. A reciclagem de papel ajuda a preservar florestas, economizar energia e água, além de
-                        reduzir a quantidade de resíduos em aterros sanitários.
+                        <h3 class="titulo">Papel</h3>
+                        <p>
+                            O lixo de papel consiste em resíduos feitos de fibra de celulose, como folhas de papel, jornais,
+                            revistas e caixas de papelão. É importante fazer a separação correta desse lixo para reciclagem,
+                            evitando a degradação do meio ambiente. O papel é coletado e passa por um processo de reciclagem
+                            que inclui a separação das fibras, a limpeza e o tratamento para a fabricação de novos produtos
+                            de papel. A reciclagem de papel ajuda a preservar florestas, economizar energia e água, além de
+                            reduzir a quantidade de resíduos em aterros sanitários.
+                        </p>
                     </div>
                 </div>
                 <div class="col-md-6 mt-5" data-aos="flip-left">
-                    <img width="460" src="assests/tela de pausa papel.png" alt="">
+                    <img width="100%" src="assests/tela de pausa papel.png" alt="">
                 </div>
             </div>
         </div>
@@ -204,19 +209,21 @@
 
     <section>
         <!-- MENU LIXO METAL -->
-        <div class="container-fluid" style="background-color: #f1c40f ; padding: 50px 0;" id="metal">
-            <div class="row p-3 p-md-5">
+        <div class="container-fluid" style="background-color: #f1c40f;" id="metal">
+            <div class="row p-3 p-md-5 align-items-center">
                 <div class="col-md-6 mt-3" data-aos="flip-left">
-                    <img width="460" src="assests/tela de pausa metal.png" alt="">
+                    <img width="100%" src="assests/tela de pausa metal.png" alt="">
                 </div>
                 <div class="col-md-6" data-aos="fade-right">
-                    <h3 class="titulo">Metal</h3>
                     <div class="texto">
-                        O lixo de metal, incluindo latas de alumínio, embalagens e ferragens, demanda reciclagem para
-                        prevenir a exploração excessiva de minérios e a poluição ambiental. O processo envolve coleta,
-                        triagem, limpeza e fusão dos materiais, resultando em metal reciclado usado na produção
-                        sustentável, economizando energia e reduzindo emissões de gases. A reciclagem de metais promove
-                        sustentabilidade e preserva os recursos naturais.
+                        <h3 class="titulo">Metal</h3>
+                        <p>
+                            O lixo de metal, incluindo latas de alumínio, embalagens e ferragens, demanda reciclagem para
+                            prevenir a exploração excessiva de minérios e a poluição ambiental. O processo envolve coleta,
+                            triagem, limpeza e fusão dos materiais, resultando em metal reciclado usado na produção
+                            sustentável, economizando energia e reduzindo emissões de gases. A reciclagem de metais promove
+                            sustentabilidade e preserva os recursos naturais.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -226,20 +233,24 @@
 
     <section>
         <!-- MENU PLASTICO -->
-        <div class="container-fluid" style="background-color: #e74c3c; padding: 50px 0;" id="plastico">
-            <div class="row p-3 p-md-5">
+        <div class="container-fluid" style="background-color: #e74c3c;" id="plastico">
+            <div class="row p-3 p-md-5  align-items-center">
                 <div class="col-md-6" data-aos="fade-left">
-                    <h3 class="titulo">Plástico</h3>
                     <div class="texto">
-                        O lixo de plástico, composto por embalagens, sacolas e utensílios, representa um sério problema
-                        ambiental devido à sua decomposição lenta que pode durar séculos. A reciclagem é crucial para
-                        mitigar esse impacto, incluindo a coleta, seleção e transformação em grânulos para novos
-                        produtos. Reduzir o consumo de plásticos descartáveis e promover a reutilização são medidas
-                        essenciais para combater a geração excessiva de resíduos plásticos.
+                        <h3 class="titulo">Plástico</h3>
+                        <p>
+                            O lixo de plástico, composto por embalagens, sacolas e utensílios, representa um sério
+                            problema
+                            ambiental devido à sua decomposição lenta que pode durar séculos. A reciclagem é crucial
+                            para
+                            mitigar esse impacto, incluindo a coleta, seleção e transformação em grânulos para novos
+                            produtos. Reduzir o consumo de plásticos descartáveis e promover a reutilização são medidas
+                            essenciais para combater a geração excessiva de resíduos plásticos.
+                        </p>
                     </div>
                 </div>
                 <div class="col-md-6 mt-4" data-aos="flip-right">
-                    <img width="460" src="assests/tela de pausa plastico.png" alt="">
+                    <img width="100%" src="assests/tela de pausa plastico.png" alt="">
                 </div>
             </div>
         </div>
@@ -247,20 +258,25 @@
 
     <section>
         <!-- MENU VIDRO -->
-        <div class="container-fluid" style="background-color: #2ecc71; padding: 50px 0;" id="vidro">
-            <div class="row p-3 p-md-5">
-                <div class="col-md-6 mt-5" data-aos="flip-left">
-                    <img width="460" src="assests/tela de pausa vidro.png" alt="">
+        <div class="container-fluid" style="background-color: #2ecc71;" id="vidro">
+            <div class="row p-3 p-md-5 align-items-center">
+                <div class="col-md-6" data-aos="flip-left">
+                    <img width="100%" src="assests/tela de pausa vidro.png" alt="">
                 </div>
                 <div class="col-md-6" data-aos="fade-right">
-                    <h3 class="titulo">Vidro</h3>
                     <div class="texto">
-                        O lixo de vidro inclui garrafas, frascos e recipientes descartados, sendo um material 100%
-                        reciclável. O vidro pode ser reciclado infinitamente sem perder suas propriedades. A reciclagem
-                        do vidro requer separação por cores (transparente, verde, marrom) para eficiência no processo. O
-                        vidro reciclado é triturado, derretido e transformado em novos produtos, como embalagens, vidros
-                        para construção e fibra de vidro. Essa prática contribui para preservar recursos naturais,
-                        economizar energia e reduzir volume de lixo em aterros.
+                        <h3 class="titulo">Vidro</h3>
+                        <p>
+                            O lixo de vidro inclui garrafas, frascos e recipientes descartados, sendo um material 100%
+                            reciclável. O vidro pode ser reciclado infinitamente sem perder suas propriedades. A
+                            reciclagem
+                            do vidro requer separação por cores (transparente, verde, marrom) para eficiência no
+                            processo. O
+                            vidro reciclado é triturado, derretido e transformado em novos produtos, como embalagens,
+                            vidros
+                            para construção e fibra de vidro. Essa prática contribui para preservar recursos naturais,
+                            economizar energia e reduzir volume de lixo em aterros.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -269,20 +285,27 @@
 
     <section>
         <!-- MENU COMUM  -->
-        <div class="container-fluid" style="background-color: #808080; padding: 50px 0;" id="comum">
-            <div class="row p-3 p-md-5">
+        <div class="container-fluid" style="background-color: #808080;" id="comum">
+            <div class="row p-3 p-md-5 align-items-center">
                 <div class="col-md-6" data-aos="fade-right">
-                    <h3 class="titulo">Comum</h3>
+
                     <div class="texto">
-                        O lixo comum, também chamado de resíduo sólido urbano, é composto principalmente por itens não
-                        recicláveis. Ele é destinado a aterros sanitários, onde passa por compactação e cobertura para
-                        evitar contaminação do solo. Práticas de redução, reutilização e separação para reciclagem são
-                        essenciais para minimizar sua quantidade. A conscientização sobre descarte adequado e consumo
-                        sustentável é crucial para lidar responsavelmente com o lixo comum e preservar o meio ambiente.
+                        <h3 class="titulo">Comum</h3>
+                        <p>O lixo comum, também chamado de resíduo sólido urbano, é composto principalmente por itens
+                            não
+                            recicláveis. Ele é destinado a aterros sanitários, onde passa por compactação e cobertura
+                            para
+                            evitar contaminação do solo. Práticas de redução, reutilização e separação para reciclagem
+                            são
+                            essenciais para minimizar sua quantidade. A conscientização sobre descarte adequado e
+                            consumo
+                            sustentável é crucial para lidar responsavelmente com o lixo comum e preservar o meio
+                            ambiente.
+                        </p>
                     </div>
                 </div>
                 <div class="col-md-6 mt-4" data-aos="flip-left">
-                    <img width="460" src="assests/tela de pausa comum.png" alt="">
+                    <img width="100%" src="assests/tela de pausa comum.png" alt="">
                 </div>
             </div>
         </div>
@@ -290,7 +313,7 @@
 
     <section>
         <!-- CADA LIXEIRA  -->
-        <div class="container-fluid" style="background-color: #69f0ae; padding: 50px 0;" id="tiposLixeiras">
+        <div class="container-fluid" style="background-color: #69f0ae;" id="tiposLixeiras">
             <h3 class="titulo text-center" data-aos="fade-up">Tipos de Lixeiras</h3>
             <div class="row" data-aos="fade-up">
                 <div class="col-md-2 col-6 image-container">
